--- a/templates/controller_test.erb
+++ b/templates/controller_test.erb
@@ -1,6 +1,6 @@
 require 'test_helper'
 
-class <%=@name%>Test < ActionController::TestCase
-  context "A <%=@name%>" do
+class <%=@parameters[:name]%>Test < ActionController::TestCase
+  context "A <%=@parameters[:name]%>" do
   end
 end
