--- a/templates/ruby_class.erb
+++ b/templates/ruby_class.erb
@@ -1,8 +1,8 @@
-class <%=@name%>
+class <%=@parameters[:name]%>
 <%
-instance_variables = @variables ? @variables.split(',') : []
+instance_variables = @parameters[:variables] ? @parameters[:variables].split(',') : []
 if instance_variables.size > 0 %>
-  def initialize(<%= @variables %>)
+  def initialize(<%= @parameters[:variables] %>)
 <% instance_variables.each { |var| %><%="    @#{var} = #{var}\n"%><%}%>
   end
 <% end %>
