Use mandatory keyword everywhere

--- a/templates/active_support_test.erb
+++ b/templates/active_support_test.erb
@@ -1,4 +1,4 @@
 require 'test_helper'
 
-class <%=@parameters[:name]%>Test < ActiveSupport::TestCase
+class <%=mandatory :name%>Test < ActiveSupport::TestCase
 end
