--- a/templates/controller_test.erb
+++ b/templates/controller_test.erb
@@ -1,6 +1,6 @@
 require 'test_helper'
 
-class <%=@parameters[:name]%>Test < ActionController::TestCase
-  context "A <%=@parameters[:name]%>" do
+class <%=mandatory :name%>Test < ActionController::TestCase
+  context "A <%=mandatory :name%>" do
   end
 end
