--- a/templates/unit_test.erb
+++ b/templates/unit_test.erb
@@ -1,4 +1,4 @@
 require 'test/unit'
 
-class <%=@parameters[:name]%>Test < Test::Unit::TestCase
+class <%=mandatory :name%>Test < Test::Unit::TestCase
 end
