Add parent to ruby class template

--- a/templates/ruby_class.erb
+++ b/templates/ruby_class.erb
@@ -1,4 +1,4 @@
-class <%=mandatory :name%>
+class <%=mandatory :name%><% optional(:parent) { |parent|%> < <%= parent %><% } %>
 <%
   optional(:variables) do |variables|
     instance_variables = variables.split(',') %>
