Add requirejs coffee tempaltes

--- a/templates/coffee_spec.erb
+++ b/templates/coffee_spec.erb
@@ -1,3 +1,3 @@
-describe '<%= mandatory :name %>', ->
+describe '<%= mandatory :subject %>', ->
   it 'should do something interesting', ->
     @fail()
